--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-streamlit
-opencv-contrib-python-headless
+instapy==0.6.11
+numpy==1.19.3
+XlsxWriter==1.3.7
+lxml==4.6.1
+streamlit==0.70.0
+selenium==3.141.0
+pandas==1.1.3
+beautifulsoup4==4.9.3
+Pillow==8.0.1
